--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .ts,.tsx,.md,.mdx && prettier --write src/**/*.tsx src/**/*.ts",
+    "prepare": "husky install"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "rollup"
+      ]
+    }
   },
   "dependencies": {
     "antd": "^5.2.1",
