add: latlong to location name conversion utils

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       " _assets/*": [ "src/assets/*"],
       "_styles/*": [ "src/styles/*"],
       "_components/*": [ "src/components/*"],
+      "_markdown/*": [ "src/markdown/*"],
     }
   },
   "include": ["src", "src/custom.d.ts", "./**/*.ts",
