add: weather column in table

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -7,5 +7,14 @@
     "prettier --write",
     "eslint"
   ],
+    "*.js": [
+    "prettier --write"
+  ],
+  "*.cjs": [
+    "prettier --write"
+  ],
+  "*.jsx": [
+    "prettier --write"
+  ],
   "*.scss": "prettier --write"
 }
