--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,7 +6,7 @@
     "allowSyntheticDefaultImports": true,
     "paths": {
       " _assets/*": [ "./src/assets/*"],
-      "_styles/*": [ "./src/styles/*"],
+      "_constants/*": [ "./src/constants/*"],
       "_components/*": [ "./src/components/*"],
     }
   },
