--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,6 +7,7 @@
     "paths": {
       " _assets/*": [ "./src/assets/*"],
       "_constants/*": [ "./src/constants/*"],
+      "_styles/*": [ "./src/styles/*"],
       "_components/*": [ "./src/components/*"],
     }
   },
