add: basic vitest testing setup

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -9,6 +9,7 @@
       "_constants/*": [ "./src/constants/*"],
       "_styles/*": [ "./src/styles/*"],
       "_components/*": [ "./src/components/*"],
+      "_pages/*": [ "./src/pages/*"],
     }
   },
   "include": ["vite.config.ts"]
