--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc -p tsconfig.prod.json && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .ts,.tsx,.md && prettier --write src/**/*.tsx src/**/*.ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "pnpm": {
     "peerDependencyRules": {
@@ -27,6 +29,7 @@
     "vite-tsconfig-paths": "^4.0.5"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/node-sass": "^4.11.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -47,6 +50,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.0",
+    "jsdom": "^21.1.0",
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
@@ -55,6 +59,7 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.54.5",
     "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "vitest": "^0.28.5"
   }
 }
