--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["vitest/globals"],
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
@@ -21,6 +22,7 @@
       "_constants/*": [ "src/constants/*"],
       "_styles/*": [ "src/styles/*"],
       "_components/*": [ "src/components/*"],
+      "_pages/*": [ "src/pages/*"],
     }
   },
   "include": ["src", "src/custom.d.ts", "./**/*.ts",
